export enum EstadoItem {
    PENDIENTE,
    EN_PREPARACION,
    LISTO
    }
